--- a/packages/@ionic/cli-framework/tsconfig.json
+++ b/packages/@ionic/cli-framework/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./"
+    "outDir": "./",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "../../../types/stream-combiner2.d.ts",
