--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.31",
+    "@types/jest": "^23.3.5",
     "@types/netmask": "^1.0.30",
     "@types/node": "^6.0.101",
     "@types/ws": "^6.0.0",
