--- a/packages/@ionic/utils-fs/package.json
+++ b/packages/@ionic/utils-fs/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.31",
+    "@types/jest": "^23.3.5",
     "@types/ncp": "^2.0.1",
     "@types/node": "^6.0.101",
     "@types/through2": "^2.0.33",
