--- a/packages/@ionic/utils-network/package.json
+++ b/packages/@ionic/utils-network/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.31",
+    "@types/jest": "^23.3.5",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
