--- a/packages/@ionic/v1-toolkit/package.json
+++ b/packages/@ionic/v1-toolkit/package.json
@@ -60,6 +60,7 @@
     "@types/express": "^4.11.0",
     "@types/gulp": "^3.8.36",
     "@types/http-proxy-middleware": "^0.17.2",
+    "@types/jest": "^23.3.5",
     "@types/node": "^6.0.101",
     "@types/ws": "^6.0.0",
     "jest": "^23.0.1",
