--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/ansi-styles": "^3.2.0",
     "@types/escape-string-regexp": "1.0.0",
+    "@types/jest": "^23.3.5",
     "@types/node": "^6.0.101",
     "@types/strip-ansi": "^3.0.0",
     "jest": "^23.0.1",
