--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -77,6 +77,7 @@
     "@types/debug": "0.0.31",
     "@types/diff": "^3.2.2",
     "@types/elementtree": "^0.1.0",
+    "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
