--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
-    "test": "jest",
+    "test": "jest --maxWorkers=4",
     "prepublishOnly": "npm run build",
     "cli-scripts:pre-commit": "lint-staged"
   },
@@ -37,13 +37,14 @@
   "devDependencies": {
     "@types/ansi-styles": "^3.2.0",
     "@types/escape-string-regexp": "1.0.0",
+    "@types/jest": "^23.3.5",
     "@types/node": "^6.0.101",
     "@types/strip-ansi": "^3.0.0",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
     "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "~23.1.0",
+    "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
   }
