--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -14,7 +14,7 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
-    "test": "jest",
+    "test": "jest --maxWorkers=4",
     "prepublishOnly": "npm run build",
     "cli-scripts:pre-commit": "lint-staged"
   },
@@ -49,6 +49,7 @@
     "@types/cross-spawn": "^6.0.0",
     "@types/debug": "0.0.31",
     "@types/inquirer": "0.0.43",
+    "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.104",
     "@types/minimist": "^1.2.0",
     "@types/node": "^6.0.101",
@@ -61,7 +62,7 @@
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
     "lint-staged": "^7.2.0",
-    "ts-jest": "~23.1.0",
+    "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
   }
