--- a/packages/@ionic/v1-toolkit/package.json
+++ b/packages/@ionic/v1-toolkit/package.json
@@ -29,7 +29,7 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
-    "test": "jest",
+    "test": "jest --maxWorkers=4",
     "prepublishOnly": "npm run build",
     "cli-scripts:pre-commit": "lint-staged"
   },
@@ -60,13 +60,14 @@
     "@types/express": "^4.11.0",
     "@types/gulp": "^3.8.36",
     "@types/http-proxy-middleware": "^0.17.2",
+    "@types/jest": "^23.3.5",
     "@types/node": "^6.0.101",
     "@types/ws": "^6.0.0",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
     "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "~23.1.0",
+    "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
   }
