--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -17,7 +17,7 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
-    "test": "jest",
+    "test": "jest --maxWorkers=4",
     "prepublishOnly": "npm run build",
     "cli-scripts:pre-commit": "lint-staged"
   },
@@ -77,6 +77,7 @@
     "@types/debug": "0.0.31",
     "@types/diff": "^3.2.2",
     "@types/elementtree": "^0.1.0",
+    "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
@@ -92,7 +93,7 @@
     "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "source-map": "^0.7.0",
-    "ts-jest": "~23.1.0",
+    "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
   }
