--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -15,8 +15,7 @@
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
     "test": "jest --maxWorkers=4",
-    "prepublishOnly": "npm run build",
-    "cli-scripts:pre-commit": "lint-staged"
+    "prepublishOnly": "npm run build"
   },
   "lint-staged": {
     "linters": {
@@ -61,7 +60,7 @@
     "@types/write-file-atomic": "^2.1.1",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^8.0.0",
     "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
