--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -35,8 +35,7 @@
     "watch": "npm run watch.tsc",
     "watch.stencil": "npm run clean.stencil && concurrently \"stencil build --dev --watch\" \"stencil-dev-server --address localhost --httpPort 8900 --no-open\"",
     "watch.tsc": "tsc -w --preserveWatchOutput",
-    "prepublishOnly": "npm run build",
-    "cli-scripts:pre-commit": "lint-staged"
+    "prepublishOnly": "npm run build"
   },
   "lint-staged": {
     "linters": {
@@ -59,7 +58,7 @@
     "@types/express": "^4.11.0",
     "@types/node": "^6.0.101",
     "concurrently": "^4.0.1",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^8.0.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "~3.1.1"
