--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -18,8 +18,7 @@
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
     "test": "jest --maxWorkers=4",
-    "prepublishOnly": "npm run build",
-    "cli-scripts:pre-commit": "lint-staged"
+    "prepublishOnly": "npm run build"
   },
   "lint-staged": {
     "linters": {
@@ -90,7 +89,7 @@
     "@types/uuid": "^3.4.3",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^8.0.0",
     "rimraf": "^2.6.2",
     "source-map": "^0.7.0",
     "ts-jest": "^23.10.1",
