--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -32,6 +32,7 @@
     "debug": "^4.0.0",
     "inquirer": "^6.0.0",
     "lodash": "^4.17.5",
+    "log-update": "^2.3.0",
     "minimist": "^1.2.0",
     "rimraf": "^2.6.2",
     "slice-ansi": "^2.0.0",
@@ -50,6 +51,7 @@
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.104",
+    "@types/log-update": "^2.0.0",
     "@types/minimist": "^1.2.0",
     "@types/node": "^6.0.101",
     "@types/rimraf": "^2.0.2",
