--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -58,6 +58,7 @@
     "elementtree": "^0.1.7",
     "leek": "0.0.24",
     "lodash": "^4.17.5",
+    "log-update": "^2.3.0",
     "opn": "^5.2.0",
     "os-name": "^2.0.1",
     "semver": "^5.5.0",
@@ -78,6 +79,7 @@
     "@types/elementtree": "^0.1.0",
     "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.104",
+    "@types/log-update": "^2.0.0",
     "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
     "@types/os-name": "^2.0.0",
