chore(lab): ignore stencil files in lint-staged

--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -42,6 +42,7 @@
       "*.{ts,tsx}": "npm run lint"
     },
     "ignore": [
+      "src/stencil/**",
       "**/__tests__/*.{ts,tsx}"
     ]
   },
