--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "chokidar-cli": "^1.2.0",
     "husky": "^1.1.0",
     "lerna": "^2.9.1",
-    "tslint-ionic-rules": "0.0.20"
+    "tslint": "^5.9.1",
+    "tslint-ionic-rules": "0.0.20",
+    "typescript": "~3.2.1"
   },
   "husky": {
     "hooks": {
