chore(lint): replace tslint.js with tslint.json
Visual Studio Code and WebStorm currently don't support the [undocumented][1]
tslint.js configuration format for TSLint.

[1]: https://palantir.github.io/tslint/usage/configuration/

--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "clean": "rimraf index.* definitions.* errors.* guards.* lib utils",
-    "lint": "tslint --config tslint.js --project tsconfig.json",
+    "lint": "tslint --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
     "test": "jest --maxWorkers=4",
