--- a/packages/@ionic/utils-fs/package.json
+++ b/packages/@ionic/utils-fs/package.json
@@ -37,20 +37,20 @@
   },
   "dependencies": {
     "debug": "^4.0.0",
-    "ncp": "^2.0.0",
-    "rimraf": "^2.6.2",
+    "fs-extra": "^7.0.1",
     "through2": "^3.0.0",
     "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@types/debug": "0.0.31",
+    "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.5",
-    "@types/ncp": "^2.0.1",
     "@types/node": "^6.0.101",
     "@types/through2": "^2.0.33",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
     "lint-staged": "^8.0.0",
+    "rimraf": "^2.6.2",
     "ts-jest": "^23.10.1",
     "tslint": "^5.9.1",
     "typescript": "~3.2.1"
