--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -27,6 +27,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@ionic/utils-array": "0.0.0",
     "@ionic/utils-fs": "1.1.0",
     "chalk": "^2.3.0",
     "debug": "^4.0.0",
