--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@ionic/utils-array": "0.0.0",
     "@ionic/utils-fs": "1.1.0",
+    "@ionic/utils-object": "0.0.0",
     "@ionic/utils-stream": "0.0.0",
     "@ionic/utils-terminal": "0.0.0",
     "chalk": "^2.3.0",
