--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -30,6 +30,7 @@
     "@ionic/utils-array": "0.0.0",
     "@ionic/utils-fs": "1.1.0",
     "@ionic/utils-object": "0.0.0",
+    "@ionic/utils-process": "0.0.0",
     "@ionic/utils-stream": "0.0.0",
     "@ionic/utils-terminal": "0.0.0",
     "chalk": "^2.3.0",
@@ -42,7 +43,6 @@
     "slice-ansi": "^2.0.0",
     "string-width": "^3.0.0",
     "strip-ansi": "^5.0.0",
-    "tree-kill": "1.2.1",
     "tslib": "^1.9.0",
     "untildify": "^3.0.2",
     "wrap-ansi": "^4.0.0",
