--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -55,6 +55,7 @@
     "@ionic/utils-network": "0.0.7",
     "@ionic/utils-process": "0.0.0",
     "@ionic/utils-stream": "0.0.0",
+    "@ionic/utils-subprocess": "0.0.0",
     "@ionic/utils-terminal": "0.0.0",
     "chalk": "^2.3.0",
     "debug": "^4.0.0",
