--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -50,7 +50,7 @@
     "write-file-atomic": "^2.3.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.1",
+    "@types/debug": "^4.1.1",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^24.0.3",
     "@types/lodash": "^4.14.104",
