--- a/packages/@ionic/utils-fs/package.json
+++ b/packages/@ionic/utils-fs/package.json
@@ -42,7 +42,7 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.1",
+    "@types/debug": "^4.1.1",
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^24.0.3",
     "@types/node": "^6.0.101",
