--- a/packages/@ionic/utils-process/package.json
+++ b/packages/@ionic/utils-process/package.json
@@ -44,7 +44,7 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.1",
+    "@types/debug": "^4.1.1",
     "@types/jest": "^24.0.3",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
