--- a/packages/@ionic/utils-subprocess/package.json
+++ b/packages/@ionic/utils-subprocess/package.json
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.0",
-    "@types/debug": "4.1.1",
+    "@types/debug": "^4.1.1",
     "@types/jest": "^24.0.3",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
