--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -78,7 +78,7 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "@types/debug": "4.1.1",
+    "@types/debug": "^4.1.1",
     "@types/diff": "^4.0.0",
     "@types/elementtree": "^0.1.0",
     "@types/jest": "^24.0.3",
