--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@stencil/core": "^0.18.0",
     "@types/express": "^4.11.0",
-    "@types/node": "^6.0.101",
+    "@types/node": "~8.9.4",
     "lint-staged": "^8.0.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
