--- a/packages/@ionic/utils-fs/package.json
+++ b/packages/@ionic/utils-fs/package.json
@@ -45,7 +45,7 @@
     "@types/debug": "^4.1.1",
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^24.0.3",
-    "@types/node": "^6.0.101",
+    "@types/node": "~8.9.4",
     "@types/through2": "^2.0.33",
     "jest": "^23.0.1",
     "jest-cli": "^24.1.0",
