--- a/packages/@ionic/utils-process/package.json
+++ b/packages/@ionic/utils-process/package.json
@@ -47,7 +47,7 @@
     "@types/debug": "^4.1.1",
     "@types/jest": "^24.0.3",
     "@types/lodash": "^4.14.104",
-    "@types/node": "^6.0.101",
+    "@types/node": "~8.9.4",
     "jest": "^23.0.1",
     "jest-cli": "^24.1.0",
     "lint-staged": "^8.0.0",
