--- a/packages/@ionic/utils-subprocess/package.json
+++ b/packages/@ionic/utils-subprocess/package.json
@@ -48,7 +48,7 @@
     "@types/cross-spawn": "^6.0.0",
     "@types/debug": "^4.1.1",
     "@types/jest": "^24.0.3",
-    "@types/node": "^6.0.101",
+    "@types/node": "~8.9.4",
     "jest": "^23.0.1",
     "jest-cli": "^24.1.0",
     "lint-staged": "^8.0.0",
