--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -37,7 +37,7 @@
     "@types/ansi-styles": "^3.2.0",
     "@types/escape-string-regexp": "1.0.0",
     "@types/jest": "^24.0.3",
-    "@types/node": "^6.0.101",
+    "@types/node": "~8.9.4",
     "jest": "^23.0.1",
     "jest-cli": "^24.1.0",
     "lint-staged": "^8.0.0",
