chore(deps): update opn -> open to 6.x

--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -63,7 +63,7 @@
     "elementtree": "^0.1.7",
     "leek": "0.0.24",
     "lodash": "^4.17.5",
-    "opn": "^5.2.0",
+    "open": "^6.1.0",
     "os-name": "^3.0.0",
     "semver": "^5.5.0",
     "split2": "^3.0.0",
@@ -83,7 +83,7 @@
     "@types/jest": "^24.0.3",
     "@types/lodash": "^4.14.104",
     "@types/node": "~8.9.4",
-    "@types/opn": "~5.1.0",
+    "@types/open": "~6.1.0",
     "@types/os-name": "^2.0.0",
     "@types/semver": "^5.4.0",
     "@types/split2": "^2.1.6",
