--- a/packages/@ionic/utils-subprocess/package.json
+++ b/packages/@ionic/utils-subprocess/package.json
@@ -40,6 +40,7 @@
     "@ionic/utils-fs": "1.2.0",
     "@ionic/utils-process": "0.1.0",
     "@ionic/utils-stream": "0.0.1",
+    "@ionic/utils-terminal": "0.0.1",
     "cross-spawn": "^6.0.5",
     "debug": "^4.0.0",
     "tslib": "^1.9.0"
