--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,9 @@
 {
-  "lerna": "2.9.1",
   "version": "independent",
   "packages": [
     "packages/**"
   ],
-  "commands": {
+  "command": {
     "bootstrap": {
       "hoist": true
     }
