--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "ionic-cli",
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap && npm run build",
@@ -19,7 +20,7 @@
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
     "husky": "^1.1.0",
-    "lerna": "^2.9.1",
+    "lerna": "^3.13.3",
     "tslint": "^5.9.1",
     "tslint-ionic-rules": "0.0.21",
     "typescript": "~3.4.2"
